Fixed spacing for content

--- a/style.css
+++ b/style.css
@@ -1,55 +1,54 @@
+* {
+    box-sizing: border-box;
+}
+
 body {
-    font-family: 'Red Hat Display', sans-serif;
+    margin: auto;
     background-color: hsl(225, 100%, 94%);
     background-image: url("./images/pattern-background-mobile.svg");
     background-position: top;
     background-repeat: no-repeat;
     background-size: contain;
+    font-family: 'Red Hat Display', sans-serif;
+    font-size: 16px;
+    padding: 70px 24px;
+}
+
+#main {
+    margin: auto;
+    border-radius: 20px;
+    box-shadow: 0px 10px 20px hsla(228, 45%, 44%, 0.295);
+    background-color: hsl(0, 0%, 100%);
+    overflow: hidden;
+    min-width: 300px;
+    max-width: 350px;
+}
+
+#main img {
+    width: 100%;
+    height: auto;
+    border-radius: 20px 20px 0px 0px;
 }
 
 h1 {
     color: hsl(223, 47%, 23%);
     font-weight: 900;
     font-size: 1.5rem;
+    margin: auto;
 }
 
-h2 {
+p {
     color: hsl(224, 23%, 55%);
     font-weight: 500;
-    font-size: 1rem;
-}
-
-h3 {
-    color: hsl(223, 47%, 23%);
-    font-weight: 900;
-    font-size: 1rem;
-    margin: 0;
-}
-
-h4 {
-    color: hsl(224, 23%, 55%);
-    font-weight: 500;
-    font-size: 1rem;
-    margin: 0;
-}
-
-.main {
-    border-radius: 20px;
-    box-shadow: 10px 10px 10px hsl(228, 45%, 44%);
-    background-color: hsl(0, 0%, 100%);
-}
-
-.main img {
-    width: 100%;
-    height: auto;
-    border-radius: 20px 20px 0px 0px;
+    font-size: 0.95rem;
+    line-height: 1.5rem;
+    margin: 16px 0px 24px;
+    padding: 0px 10px;
 }
 
 .summary {
-    display: flex;
-    flex-direction: column;
-    align-items: center;
     text-align: center;
+    padding: 30px 24px;
 }
 
 .change-plan-link {
@@ -59,39 +58,74 @@ h4 {
 }
 
 .plan-box {
+    border-radius: 10px;
     background-color: hsl(225, 100%, 98%);
-    display: flex;
-    flex-direction: row;
-    align-items: center;
-    /* width: 80%; */
+    width: 100%;
+    padding: 15px;
 }
 
-.plan-icon {
-    /* height: 30%; */
-    /* width: auto; */
+.plan-box>img {
+    width: 100%;
+    max-width: 50px;
+    /* height: auto; */
 }
 
 .plan-desc {
     text-align: left;
 }
 
+.plan-desc>h3 {
+    font-size: 0.9rem;
+    color: hsl(223, 47%, 23%);
+    font-weight: 900;
+    margin: auto;
+}
+
+.plan-desc>h4 {
+    font-size: 0.9rem;
+    color: hsl(224, 23%, 55%);
+    font-weight: 500;
+    margin: auto;
+}
+
+.plan-box>a {
+    font-weight: 700;
+    font-size: 0.85rem;
+}
+
 .payment-link {
     background-color: hsl(245, 75%, 52%);
+    border: none;
     border-radius: 10px;
-    box-shadow: 0px 10px 10px hsl(224, 23%, 55%);
-    color:hsl(0, 0%, 100%);
+    box-shadow: 0px 10px 10px hsla(224, 23%, 55%, 0.274);
+    color: hsl(0, 0%, 100%);
     text-decoration: none;
     font-weight: 700;
-    font-size: 1rem;
-    /* width: 80%; */
+    font-size: 0.9rem;
+    width: 100%;
+    height: 50px;
+    margin: 20px 0px;
 }
 
 .cancel-order-link {
-    color:hsl(224, 23%, 55%);
+    color: hsl(224, 23%, 55%);
     text-decoration: none;
     font-weight: 700;
-    font-size: 1rem;
+    font-size: 0.9rem;
 }
 
-.attribution { font-size: 11px; text-align: center; }
-.attribution a { color: hsl(228, 45%, 44%); }
+.attribution {
+    margin-top: 20px;
+    font-size: 11px;
+    text-align: center;
+}
+
+.attribution a {
+    color: hsl(228, 45%, 44%);
+}
+
+@media (min-width: 992px) {
+    body {
+        background-image: url("./images/pattern-background-desktop.svg");
+    }
+}
